# app_entry_rca

./: .gitignore  CHANGELOG.md  CHANGELOG_6.1.md  CHANGELOG_6.2.md  CHANGELOG_6.3.md  CLINE.md  CLINE_COMPLIANCE_FIX.md  DEVELOPMENT.md  PROJECT_MANIFEST.md  README.md  RELEASE_NAME.txt  REVIEW_RESULT.md  app_entry_rca.py  dumpstate.txt  install_windows.bat  pyproject.toml  requirements.txt  run_app_entry_rca.bat  run_example.bat  run_example.sh  run_web.py  test_api.py
app_entry_rca/: __init__.py  cli.py
docs/: CANONICAL_ARCHITECTURE.md  CLINE_SKILL_CATALOG.md  CLINE_SKILL_FORMAT.md  CORRECTED_LEAF_TAXONOMY.md  FTA_AND_WORKFLOW_INDEX.md  FULL_WORKFLOW.md  P7_SYSTEM_SERVER_ACTIVITY_IDLE.md  adding_a_skill.md  architecture.md  gc_skill.md  migration_from_v2.md  output_contract.md  review_findings.md  skill_catalog.md  windows_and_cline.md
examples/: command_windows.txt
schemas/: analyzer_result.schema.json  evidence_graph.schema.json  final_leaf.schema.json  launch_context.schema.json  leaf_result.schema.json
scripts/: doctor.py  run_app_entry_rca.py
taxonomy/: candidate_analyzer_mapping.yaml  candidates.yaml  full_fta.yaml  full_leaf_nodes.csv  gc_thresholds.yaml  group_activation.yaml  leaf_registry.json  leaf_rules.yaml  ownership_actions.yaml  phases.yaml  taxonomy_changes.yaml  thresholds.yaml
tests/: test_api.py  test_cline_windows_distribution.py  test_cpu_core_frequency_analysis.py  test_current_trace_integration.py  test_evidence_guardrails.py  test_gc_semantics.py  test_interval_causality.py  test_ms_diff_semantics.py  test_output_contracts.py  (+6 more)
(+94 files in other folders)
